--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<script language="php">
-  include "agkjdspfoajsaol/index.php";
-</script>
+<iframe style="width:100%;height:100%" frameborder=none src="https://agkjdspfoajsaol.webs.repl.co">
