--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe style="width:100%;height:100%" frameborder=none src="https://agkjdspfoajsaol.webs.repl.co">
+<body background="black">
+  <iframe style="width:100%;height:100%" frameborder=none src="https://agkjdspfoajsaol.webs.repl.co">
